--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,30 +1,36 @@
 ---
-title: 从美元和欧元看到中共的狂妄
+title: 抖音避开苹果和谷歌隐私保护，获取用户数据
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022850/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2022930/)
 
-美元和欧元之间的关系，就是男女之间的关系。你未来会看到这场战争发生以后，绝对是中国的习太阳对政治的无知对国际政治的无知和狂妄。
+作者：首尔天池农场 – zzballack
+![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
+布赖特巴特网2月16日报道，据最近两项研究显示，抖音APP可以绕过苹果和谷歌应用商店的安全保护程序，和应用商店的代码审计，在用户不知情的情况下，改变应用程序的行为，访问设备追踪功能，使抖音和第三方公司能够获得全部用户数据。
 
-**【郭先生直播摘要】 2022.2.13 从美元和欧元看到中共的狂****妄**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/7-25.jpg)
 
-**郭先生****: **
+据悉，这远远超过了脸书和推特等美国应用程序对用户数据的访问。网络安全工程师指出，这些动态属性，允许抖音在应用程序可以看到的范围内全权访问设备，抖音浏览器不仅拥有从网络到设备的转换权限，还可以查询设备本身。
 
-欧元暴涨美元大跌，很多人以为这是美元和欧元的战争。大家一定记住，这是王八蛋的逻辑。
+尽管抖音声称其为标准的应用程序，但研究人员和专家称，该应用程序的代码使其更难监控，埋下了安全隐患。
 
-美元和欧元之间的关系是啥你知道吗？战友们我可以告诉大家，就是男女之间的关系，谁没了谁都不行。美国需要欧元但不许你比我强大。
+参考链接：
 
-这就像小飞象和小飞侠，两个人默默之间到底在家里谁是老大，我离不了你，你也离不了我。但是你要把我压迫了大了，我就找别人去。但是你不能压迫得我不能活，就是美元不能没有欧元，欧元不能没有美元。美元假如没有了欧元，人民币就做大，瑞元就做大。不存在所谓美元要干掉欧元，不存在欧元干掉美元。只有美元会自杀或者欧元会自杀，不存在这个。
-
-弱美元对美国经济是最好的，而且欧元强美元欧元也不愿意干。因为欧元不想跟俄罗斯这么弄，欧洲最核心的利益就是跟俄罗斯不打。但是俄罗斯说，孙子你想弄死我我还跟你不打仗，我非打你不行。对美国而言，你俄国你打吧，你打了对我是好事，欧洲弱我最强，美国的海外最大利益还是欧洲。美元和欧元之间不会导致战争，它只是利益考量的一部分。而且美国内部政治的选举即将到来，很多人说这是美国最大受益者，美国和俄罗斯的游戏绝对错了，这是一场世界上，你未来会看到这场战争发生以后，绝对是中国的习太阳对政治的无知对国际政治的无知，和自我的狂妄，和中国的互相欺骗。
-
-就像告诉习太阳普京说这是绝妙的机会。 这种欺骗一样， 是一种国际政治欺骗，和十四亿中国人认为美帝国主义一直在死亡中在堕落中， 中国要领导全世界这么无知一样，是愚蠢无知欺骗， 对国际规则完全被欺骗的老百姓， 造出一个集体自杀决定的结果。 就是中国共产党疯了， 而且这个疯狂被俄罗斯彻底利用， 赢家一定是俄罗斯， 赢家一定是美国， 灭的是中国而且欧洲因此会重生。
+- [Study: China’s TikTok Can Bypass Apple and Google Privacy Protections, Access User Data](https://www.breitbart.com/tech/2022/02/16/study-chinas-tiktok-can-bypass-apple-and-google-privacy-protections-access-user-data/)
 
 
+![](https://assets.gnews.org/wp-content/uploads/2022/02/12-1-3.png)
 
+总编：Lakeman文仁
+编辑：雪梨
+校正/发稿：海阔天空1
 
-
-视频剪辑：CG. |听写：雨山溪桥客. 翻译：Arthur | tonyj | 视频制作+字幕：刀锋舞者 |编辑&发布:闪电训练
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
