--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,30 +1,36 @@
 ---
-title: 【秘翻在线】加拿大自由车队两名主要组织者已在渥太华被捕
+title: 美南达科他州众议院通过伊维菌素法案
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022849/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2022929/)
 
-**撰稿：Grace**
+作者：纽约香草山 – 侠肝义胆
+![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
+周一，美国南达科他州众议院，以40-28票通过了HB 1267法案，将伊维菌素作为治疗中共病毒的药物。该法案规定，医生可以按照医疗标准 ，向患者开具伊维菌素。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-25.jpg)
+多项研究表明，伊维菌素能有效治疗冠状病毒，减少中共病毒患者的疾病和死亡。
 
-**校对：Grace**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-17-at-9.46.30-PM.jpeg)图片来源：Fox news 
-据加拿大广播公司新闻（CBC） 2月17日报道，加拿大的自由车队的两名主要组织者塔玛拉·利奇（Tamara Lich）和克里斯·巴伯9 Chris Barber）已在渥太华被捕。
+该法案的提案人之一、共和党州议员塔菲·霍华德表示，该方案旨在为那些因担心职业处分、而不愿意为中共病毒病人开具伊维菌素的医生提供支持。
 
-据报道，利奇在周四晚上被捕，巴伯在当天早些时候被渥太华警方逮捕。两人都仍被警方拘留，预计将受到刑事指控。
+据悉，该法案已进入南达科他州参议院进行审理。
 
-利奇周四早些时候向加拿大媒体证实，当来自萨斯喀彻温省（Saskatchewan）的卡车司机巴伯被逮捕并被带离时，她就在现场。
+参考链接：
 
-利奇说，她对自己要入狱的事实心有不甘，并补充说她的个人银行账户已被冻结。
+- [South Dakota state House passes bill allowing doctors to prescribe ivermectin](https://www.lifesitenews.com/news/south-dakota-state-house-passes-bill-allowing-doctors-to-prescribe-ivermectin/)
 
-报道称，他们是周四被逮捕的几个人之一。在离国会山几个街区的地方，有人看到巴伯被戴上手铐，夹在两名警察中间。
 
-据报道，他们是律师保罗·钱普（Paul Champ）代表他的客户21岁的公务员Zexi Li向安大略省高级法院（Ontario Superior Court of Justice）提起的拟议集体诉讼中的三名抗议活动组织者中的两人。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/12-1-3.png)
 
-该诉讼还提到了同为车队组织者的本杰明·迪克特（Benjamin Dichter）。
+总编：雪梨
+编辑：雪梨
+校正/发稿：海阔天空1
 
-据报道，当被问及巴伯的被捕时，渥太华警方表示，在提出指控之前，他们不会确认或否认对人的调查。
-
-**新闻来源：****[Convoy protest organizers Tamara Lich, Chris Barber arrested in Ottawa](https://www.cbc.ca/news/canada/ottawa/tamara-lich-chris-barber-arrested-ottawa-1.6355960)**
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
