--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,88 +1,33 @@
 ---
-title: 全球疫情更新（英儿童“疫苗”获批背后的十亿美元猫腻）
+title: 中共政治、经济已回天乏术
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2022829/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2022917/)
 
-**整理/编辑：枳实**
+撰稿/总编：雪梨
+![](https://assets.gnews.org/wp-content/uploads/2022/02/gtv-best-8.png)
+郭文贵先生在2月16日的直播中表示，无论是全球政治影响力，还是国内政治和经济，中共已回天乏术。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1680.png)
+在中共残杀香港同胞、对新疆实施种族灭绝，利用蓝金黄渗透全世界，释放中共病毒和疫苗残害全世界人民，北京冬奥会遭世界唾弃的事实面前，中共在全球的影响力已回天乏术。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1528.png)图片：雅典娜农场设计组 精灵蓝
+中共以黑治国，以警治国，以贪反贪，以黑反贪，党内斗争激烈，中共内部政治已回天乏术。
 
+在二十几家商业银行已经破产，二百多家银行即将破产；两万家小房企破产，两千多家即将破产的情况下，中共国经济已回天乏术。
 
-雅典娜疫情更新（2022年 2月17日）
+而香港和台湾向全世界证明，中国人勇敢、勤劳和诚信的品质，对自由、民主、文明、信仰的向往和追求。（请播放视频，视频时长2‘47“）
 
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
+视频链接：https://gtv.org/video/id=620d618db0af02660af46a64
 
-**一，全球疫情基本数据**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-12-at-10.08.22-PM-768x1076-3.png)
 
-感染总数：417,655,449（日新增2,062,397人，14天增幅-35%）
+校正/发稿：浪迹天涯
 
-死亡总数：5,849,200（日新增10,341      人，14天增幅 -1%）
-
-**二，全球“疫苗”毒针统计数据**
-
-“疫苗”毒针注射总数：105亿
-
-完全“接种”：42.8亿人
-
-完全“接种”百分比：54.9%
-
-**三，澳洲疫情和“疫苗”数据**
-
-感染总数：2,967,078（今日新增28,052人）
-
-死亡总数：4,798人（今日新增 66人）
-
-每万人感染人数：1151.6461人
-
-“疫苗”毒针注射总数：52,859,039    （今日新增157,935    针）
-
-完全“接种”：19,409,879人
-
-第二针“接种”百分比：79.3%
-
-16岁以上人口接种至少一剂疫苗的比例：&gt;95%
-
-16岁以上人口接种至少两剂疫苗的比例：94.1%
-
-加强针总数：10,453,973    （日新增：136,476针）
-
-**四，****疫情新闻评论**
-
-澳大利亚和美国等国家早已批准了5-11岁的中共病毒疫苗毒针的广泛接种，而英国则一直没有批准，去年底12月，仅仅批准了对有并发症的儿童接种。但周二，英国政府终于也加入了进一步毒害儿童的行列，[根据英国疫苗接种和免疫联合委员会 (JCVI) 的建议](https://www.theguardian.com/world/2022/feb/17/limited-vaccine-access-for-children-in-england-aged-5-11-likely-to-widen-inequalities)，宣布[将为英格兰所有 5 至 11 岁的儿童提供中共病毒疫苗。](https://www.theguardian.com/world/2022/feb/16/five--to-11-year-old-children-in-england-to-be-offered-covid-vaccine)[威尔士](https://www.theguardian.com/uk-news/2022/feb/15/children-aged-five-to-11-in-wales-to-be-offered-covid-jab)和[苏格兰](https://www.theguardian.com/uk-news/2022/feb/16/scotland-to-offer-covid-jab-to-all-children-aged-five-to-11-says-sturgeon)也发布了类似的公告，北爱尔兰已经确认也会这样做。
-
-然而，今天《每日曝光》仅通过初步的搜索，就揭露了疫苗接种和免疫联合委员会中的六名成员以不同方式接受了盖茨基金会的资助，总额达到十亿美元之巨！然而这些委员却没有一人曾经申报过存在利益冲突。更令人震惊的是，其中一名委员领导着辉瑞疫苗卓越中心竟然也没有申报！
-
-还有其它蹊跷的事情。例如林魏生教授（PROFESSOR LIM WEI SHEN，音译）曾经在 2021 年 8 月 4 日明确表示，不会向12-15 岁的儿童  提供 COVID-19 疫苗。发表该声明后不到 6 周，就赞同了为 12-15 岁的孩子提供毒针，此后仅 6 个月，就扩展到了 5-11 岁的孩子们。
-
-再比如来自英国公共卫生部的KEVIN BROWN 博士。“BROWN 博士没有登记的利益冲突”，但他的雇主英国公共卫生部已从盖茨基金会获得 7,451,295 美元。另外布朗博士还与人合作进行了一项关于辉瑞和阿斯利康针剂的“真实世界有效性”的有利于药厂的研究。
-
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
-
-数据来源：
-
-[谷歌](https://www.google.com/search?q=covid+case&amp;rlz=1C1ONGR_en-GBAU960AU960&amp;oq=covid+case&amp;aqs=chrome..69i57j69i59j0i402l2j0i131i433i512j0i20i131i263i433i512j0i131i433i512j69i60.1435j0j4&amp;sourceid=chrome&amp;ie=UTF-8)
-
-[Our world in data](https://ourworldindata.org/coronavirus-data)
-
-[澳大利亚卫生部网站中共病毒疫苗统计](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/numbers-statistics)
-
-[澳洲TGA每周疫苗不良反应报告](https://www.tga.gov.au/covid-19-vaccine-safety-monitoring-and-reporting)
-
-[covidlive.com.au](https://covidlive.com.au/)
-
-[Booster shot gap to be slashed to four months and then down to three](https://www.news.com.au/lifestyle/health/health-problems/booster-shot-period-to-be-slashed-to-four-and-three-months-as-omicron-fight-ramps-up/news-story/005b2aabba44f2e2b72dac7aa019611d)
-
-[Coronavirus World Map](https://www.nytimes.com/interactive/2021/world/covid-cases.html)
-
-发布：tianzhihuan
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/gtv-best-8.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
