--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,34 +1,27 @@
 ---
-title: 2月16日大直播后记：G-MALL和喜币场外交易
+title: 喜币的四个核心价值
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2022806/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022890/)
 
-整理：美哥、枫叶红了
-编辑：小红帽
+喜币不能超发，可以兑现，没有第三方，无成本。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-7.png)图片来源：雅典娜农场设计组（614）
+**【郭先生直播摘要】 2022.2.13 喜币的四个核心价值 **** **
+
+**郭先生：**
+
+战友们你们要懂得喜币喜联储它有多伟大，喜币最牛的四点它完全搞了。 你存在银行的钱和过去的纸币。第一它增发。丹尼给了我100块钱, 我给你印出了一千块钱, 你就被兑水了. 第二个最可怕的问题，我们大家都忽视掉的问题, 它是不可兑现，就是我可以不还给你, 我有不兑现的权力, 这是更可怕。 喜币绝不可能，因为一美元就是一美元，一币就是一币，就是市场交易。第三件事，它是一个中介，第三方经营化，它不是点到点。
+
+我们的喜币喜美元是A到B，喜联储不能控制，没有任何权力。第三个，它不是中介方，第四个，最核心的是什么？它没成本。你去想想，Hpay没有成本，没有成本的没有第三方的，绝对必须保证原值的。第四不可增发的，银行哪有这个条件？哪家银行不增发？哪家银行不印刷？而且关键最核心的这四样的基础是什么？
+
+它的价值，大家要记住，喜币一年就十个亿。多一个就是犯罪，所有美国人所有全世界币，政府一句话就可以印刷。叫超发，那十亿个币是你知道的，关键是美国也好，我有一万个亿我不增发。他没告诉你我有一万个亿，喜币白皮书是先订下数量，没有一个国家银行告诉你我的币有多少个。没有一个，只有喜币，BTC牛就牛在固定数量，只有2600万。
+
+我就这麽多，但是是不是这么多另说，就这一样它就赢了，才有今天的比特币，这是核心。当发现喜币有任何一个增发的时候，你们记住，你们一定告死它，那么它会把命赔上，终身都蹲在监狱里。这不可能的。
 
 
-G-MALL这个事情一定会来的，但是我们希望把今年的精力更多地放在这些项目上：战友们投资的GTV，战友们的喜联储，战友们的盖特，战友们的G-news，还有G-fashion，G-club经营质量的提高，功能的完善。你们认为G-MALL是我们保证商品流通的一个平台，这是肯定的。但是从今年看，它远远超出了我们想象，最后我们总是发现自己的今天比昨天超级伟大。我总是能发现，原来过去的一个月这么伟大。这是我现在生活的感受。
 
-就像个人破产一样，今天我感觉昨天个人破产的事，怎么这么伟大？那么现在看，不是我们要不要G-MALL的问题。全世界任何的商家以后都不可能不使用HPAY，不使用喜币。在空中有无数个G-MALL在等着我们。现在和我们谈判的（商城）能把你们吓死。喜联储这帮人真的不会宣传，我心目中的车神就是巴西的塞纳，塞纳竟然接受了喜币，把车卖给了喜联储。你们没看到吧？塞纳真是大帅哥，我心中了不得的男神。你再看看现在正在谈的几大商场。网上线下的商城都在跟喜联储谈。现在我再告诉大家，未来不仅在迪拜–原来迪拜发那个（信息）是不准确的，现在未来不仅在迪拜，很多地方会接受喜币买房子。过去你不敢想象的事儿，现在你都是完全可以想象。你再想G-MALL的时候都成了小事。
 
-场外交易的最大的问题是什么？我有HPAY，你也有，但不等于我手里边就有HDO，我手里边只有Hcoin。但我不想接受市场的价格买卖，或者说我想今天用钱，但我不一定卖掉它。我就跟对方形成契约式的精神，我拿出100块钱，（到时候）你得还给我，或者加120块钱还给我，这种交易是任何人无法控制的。
 
-我现在有1万个币想卖，但是我不想卖45块钱，我想拿回来的是100块钱一个币。有一天，我可以拿120块钱还回来，就限定的时间内或者自动划走。这个时候我就把Hcoin转给你了。这种交易是我们鼓励的，因为这个交易解决一个问题–让有些人能买币。KYC过不了的人就只能在场外交易买你的币了，因为他在美国，加拿大的钱做KYC过不了。那么更重要的是解决什么？人家对现在市场价格不认可，还有附加了一个未来我可以把它赎回的体制。喜联储是无法把这一系列都完成的，因为它必须尊重绝大多数原则，所以这个场外交易是可以的。
-
-另外一个关于新GTV，4月30号投资结束的问题,HCOIN是不能投GTV的，你只能是HDO，还是在联盟同意的统一协调下。那么这个情况下HDO投资GTV和HCOIN的价格没有什么关系？有人傻，为投资GTV卖喜币。卖了你就吃亏了。你一定会吃亏的，不管你现在卖多少钱。除了你有赎回机制，否则你一定会后悔的。所以我告诉大家，投新GTV，4月30号有些必须卖币情况下你就卖掉，价格会有短期的浮动，可能会差几块钱。
-
-资料来源：2022年2月16日郭文贵先生大直播
-
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+视频剪辑：GC| 听写：雨山溪桥客|翻译：Arthur |校对: tonyj | 视频制作+字幕：刀锋舞者 | 编辑&发布：闪电训练
 
  
 
