--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,27 +1,79 @@
 ---
-title: 台湾行政院推动修法防范北京偷盗核心技术
+title: 魔鬼的圈套——评杨贝贝和她的所谓采访（六）
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022793/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2022873/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Unknown-18.jpg)台湾行政院推动修法防范北京偷盗核心技术 网络图片
-据美国之音2月17日报道，为了防止核心技术外流，或中共国大陆通过经济间谍窃取情报，或核心技术人才遭北京利诱，台湾行政院17日通过国家安全法和条例修正草案，增订国家核心关键技术经济间谍罪，对包括半导体在内的台湾核心技术提供更多的保护。同时提高相关惩罚，对窃取或泄露核心技术者最高处12年有期徒刑，并处新台币1亿元以下罚金。此外，核心关键技术者如果需要前往中共国大陆，必须经过审查并获得许可才能成行。
+**作者：**香草山农场教育部 — 霍比特人
 
-台湾虽然总体经济实力不如中共国大陆，但在特定的高科技领域却在全球独领风骚。台湾生产全世界最为先进的半导体芯片，不仅配备在顶尖的战机和其他武器装备上，而且也用于诸如手机这样的民用消费品中。与欧美一些国家一样，台湾也长期担心中共国大陆以经济间谍或其他手段窃取台湾的核心技术，复制台湾的成功前例，或削弱台湾的技术优势。
-
-高科技产业是台湾的经济命脉，近在咫尺的中共间谍以各种手段吸引台湾高科技人才，并且渗透到台湾的各行各业窃取关键的核心技术。台湾行政院通过的修法草案需要经过立法院的审理和通过，才能成为正式的法律。但是中共国间谍已经成为台湾，甚至全世界每一个发达国家的威胁，全世界都在防范和围堵盗窃手段高超的中共间谍。
-
-新闻参考链接：[https://www.voachinese.com/a/taiwan-with-eye-on-china-to-boost-protection-for-its-semiconductor-secrets-20220217/6445871.html](https://www.voachinese.com/a/taiwan-with-eye-on-china-to-boost-protection-for-its-semiconductor-secrets-20220217/6445871.html)
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/logo-5.jpg)
 
 
-编辑：【英国伦敦喜庄园编辑部】
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
+欲了解之前内容，请参看：
+
+[魔鬼的圈套——评杨贝贝和她的所谓采访（一） – GNEWS](https://gnews.org/zh-hans/1935024/)
+
+[魔鬼的圈套——评杨贝贝和她的所谓采访（二） – GNEWS](https://gnews.org/zh-hans/1940251/)
+
+[魔鬼的圈套——评杨贝贝和她的所谓采访（三） – GNEWS](https://gnews.org/zh-hans/1953518/)
+
+[魔鬼的圈套——评杨贝贝和她的所谓采访（四） – GNEWS](https://gnews.org/zh-hans/1976661/)
+
+[魔鬼的圈套——评杨贝贝和她的所谓采访（五） – GNEWS](https://gnews.org/zh-hans/2010678/)
+
+注意：本文中出现的《规范》指的是《美国职业新闻记者协会(SPJ)职业伦理规范》（SPJ Code of Ethics）。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-76.png)
+
+杨贝贝，英文名为Isobel Yeung，出生于1986年。其父来自中（共）国大陆，几十年前逃离大陆后娶了一个英国妻子。对于无时无刻不在惦记培养海外代理人的中共来说，杨贝贝无疑是个理想的培养对象。果不其然，后来，她真的回到了她父亲想方设法逃离的中（共）国大陆。
+
+2009年，在从诺丁汉大学毕业后，杨贝贝选择了去往上海，为绝对被中共控制的“党的喉舌”——上海电视台工作。她作为“上海国际频道”的自由职业者，不但服务于欺骗、控制中国人民，并对全世界撒谎的中共，而且还穿上了军装。此后，她相继就职于拥有共同老板单伟建的TPG（德州太平洋）和PAG（太盟基金）。而现在我们都已知道，这两家公司都隶属于中共，而单伟建是中共间谍。值得注意的是，这两家公司在中共党内均隶属于江泽民、王岐山派。
+
+随后，在为中共的电视台和公司工作了约5年后，已被“训练”有素杨贝贝，被派往纽约为Vice Media工作，以获得更大的名气和弥补海外工作经历上的空白。期间，她靠着有关新疆和阿富汗的采访而成名。
+
+那么现在我们来分析一下，已经拥有一定知名度的杨贝贝为什么会被“委以重任”来担纲完成对郭文贵先生的“采访”任务。
+
+在杨贝贝代表HBO对郭文贵先生进行采访前，新疆已因郭先生的爆料而为世界所瞩目，所以她对新疆的“采访”爆料不会给中共带来更大的实质性损失。这样看来，顺水推舟让自己的“雇员”因敢于披露真相而提高名望，中共何乐而不为呢？这个推论合情合理。否则，为何众多外国记者对新疆的采访要求被悉数拒绝，而唯独有着在中共国工作背景的她的采访请求获得了批准？因为，作为“自己人”，她的采访不仅不会爆出更多新信息、对中共来说是安全的，同时却又能把她塑造成一个所谓“反共人士”。
+
+至于阿富汗，就更有趣了。上文我们已经提过，杨贝贝在中共国工作的两家公司同属于中共党内的江泽民、王岐山派，该派届时正和习近平派斗得你死我活。而在阿富汗发生的一切恰好是习近平派主导的，那派个人去进行采访给习近平捣乱添一下堵，顺便塑造采访者自由民主记者的形象，又何乐而不为？笔者之所以这么说，不仅是因为有文贵先生海量的爆料为依据，也有自己的理由。笔者的一个同学曾在海外为中共做代理人（服务于千人计划），在她“退役”后我们曾共进晚餐深聊长谈，笔者从她口中了解了不少与这方面相关的事情——这些中共培养代理人的典型套路。
+
+现在，杨贝贝已经足够有名能够担纲Vice Media的当家花旦了，所以是时候把她派到真正的“战场”上，也就是对文贵先生进行采访了。4年前当她第一次采访文贵先生，曾使用和现在同样的方式制造了假新闻。由此推断，此次文贵先生已熟知她的套路并故意接受了她的采访，以免他们使出其他对海外华人破坏力更大的招数。
+
+除了对以上中共指派杨贝贝对郭先生进行采访的幕后原因的分析，我们还必须更加深入了解她的公司。Vice Media和HBO有共同的老板：时代华纳（Time-Warner）。华纳的目标是趁着“随着数字设备的激增中国的媒体板块迅速扩张”这一时机而“扩张资本”。也正因如此，他们才和华人文化产业投资基金(CMC)结为合作伙伴，在中国砸下巨额投资。试想，这样的公司怎么可能不被中共摆布？可想而知，它的“儿子” HBO和Vice Media也是同样，骨髓里渗透着对不择手段进行“资本扩张”的渴望。更别提，Vice Media的大股东里就包括中共间谍单伟建的TPG了。
+
+即便暂且放下中共操控的这个因素不谈，HBO作为一个所谓“媒体”，其本身也有着歪曲捏造事实、诽谤他人的“传统”，因为他们在西方有自己本来的主子——世界黑暗势力。例如，他们曾在2019年推出了一部叫作“离开梦幻岛”的片子，对已故十年、再也无法为自己辩护的“流行乐之王”迈克尔·杰克逊进行了疯狂地诽谤，其手法与今天杨贝贝的所谓纪录片如出一辙（完全不能用《规范》来评价）。众所周知，迈克尔·杰克逊一生都在与3k党斗争，他的死因至今成谜。由此可见，HBO的所作所为绝不会仅仅是为了金钱和收视率。只要主子发话，他们什么事都做得出来，差别只在于谁是主子，为了谁卖命而已。Vice Media和HBO也是同样。
+
+然而这一次，从他们的“犯罪手法”来分析，Vice Media和杨贝贝的所谓采访应该有着中共和世界黑暗势力的双重背景，两股势力的黑金汇聚一处，两个主子为了各自不同的利益共同策划了这一次的攻击，以图达到一石三鸟的目的。从这次的纪录片我们可以看到，他们把曾对迈克尔·杰克逊进行人身攻击的手法与中共惯用的个人、经济、政治攻击手法以及黑暗势力惯用的“阴谋论”、挑拨种族矛盾的手法悉数整合于一体，可谓是“集大成”之作。Vice Media和杨贝贝与司法部文件揭示的艾力博迪，尼克拉姆戴维斯那伙人一样，都是为了金钱而与中共合作的、没有注册的中共海外代理人（在今天的西方社会，这类人的数量是惊人的），同时又为他们本来的主子，即海外黑暗势力效力。
+
+除了上述信息——杨贝贝为中共工作的历史背景，单伟建的TPG是Vice Media的大股东，以及时代华纳的巨额资本与中共捆绑这些因素之外，我们将提供更多其他线索。
+
+让我们把这个话题留到下一期再详细陈述吧。
+
+（未完待续）
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-8.jpg)
+
+编辑/校对/发稿：小鹿
+
+
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场**** ****GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场**** ****GTV-MOS TALK**** ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场**** ****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** ****YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 ****Discord**](https://discord.gg/ChqXAHd)
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/logo-5.jpg)
+
+
 
 
 
