--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,38 +1,25 @@
 ---
-title: 有声&#124;美通过《2022年美国竞争法》，防止中共企业垄断
+title: 美智库：世银国际金融机构非法资助新疆强迫劳动公司
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022734/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2022827/)
 
-配音：香草山佛教部 – 李傻
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+**撰稿：日本东京方舟农场  海星**
 
-![](https://gdb.voanews.com/09dd0000-0a00-0242-f776-08d9e826901a_w1023_r1_s.png)
-近年来，中共积极游说国际电信联盟（ITU）、国际电工委员会（IEC）等机构，让中共的企业获得竞争优势。面对此冲击，美在北京冬奥开幕当天通过《2022年美国竞争法》，旨在帮助美半导体制造业，抵消中共扭曲市场的贸易行为，包括加强反倾销规则等。
+近期，美国智库发布的一份报告披露，世界银行旗下国际金融公司（International Finance Corporation）向新疆强迫劳动的中共公司非法提供巨额资金。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-283.jpg)（图片来源：美联社）
+据《自由时报》报导，美国华盛顿智库大西洋理事会发布的一份报告披露，世界银行旗下国际金融公司向晨光生物科技集团（Chenguang Biotech Group）、骆驼集团（Camel Group）、九州通医药集团（Jointown Pharmaceutical Group）和世纪阳光集团（Century Sunshine）共4家中共公司非法提供巨额资金，金额高达4.85亿美元。
 
-美国也和日本连手建立6G无人化技术的国际标准，防止中共企业垄断，并强化尖端技术保护，防范中俄经济间谍战。
+该报导指出，上述公司长期招聘新疆劳动人民，并强迫他们劳动，违反《全球马格尼茨基法案》。因此，大西洋理事会指控国际金融公司违反了国际标准，并呼吁该机构立即撤出对新疆强迫劳动公司的投资。
 
-欧盟主管竞争事务的执委维斯塔哲（Margrethe Vestager）表示，中共近期重新定义网络的基本标准，让中共对国有网络的使用者有更大的控制权，因此，欧盟委员会提出对行业标准系统实施改革，藉以避免欧洲数码产业等被被中共主导。
+据悉，2019年美国国会及行政当局中国委员会（CECC）就因世界银行非法资助中共新疆劳改再教育营项目而对其提出控告，最终，世界银行终止了对该项目投资5000万美元的计划。
 
-近日，北京大学在一份报告中罕见承认，美中科技脱钩后，中共无论在技术层面还是产业层面都明显落后，中共的芯片制造、人工智能及信息科技产业更将面临严重的发展瓶颈。该报告在墙内被火速删除。
+参考链接：
+1.[https://ec.ltn.com.tw/article/breakingnews/3832823](https://ec.ltn.com.tw/article/breakingnews/3832823)
+2.[https://www.ntdtv.com/b5/2019/11/12/a102705448.html](https://www.ntdtv.com/b5/2019/11/12/a102705448.html)
 
-文字版原文：[美通过《2022年美国竞争法》，防止中共企业垄断](https://gnews.org/zh-hans/2022413/)
-
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
-
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
-
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+素材采编：海星
+编辑：青城道姑
+发布：爱放飞
 
  
 
