--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,34 +1,36 @@
 ---
-title: 有声&#124;班农先生呼吁追责中共并改变治世模式
+title: 测试结果显示疫苗对卵巢和睾丸产生损害
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022711/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022792/)
 
-配音：香草山佛教部 – 李傻
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-2月15日，据盖特消息显示，班农先生近日在接受采访时指出，郭文贵先生此前反复强调，当民意跌至谷底时，中共病毒疫苗强制令就会发生改变。如今，全球政客的民意调查都显示出灾难性的结果，于是，那些推行强制疫苗和疫苗护照的政客们纷纷转变了风向。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/4-38.jpg)
-班农先生也提到，正如郭先生示警的那样，中共病毒不仅是来自武汉病毒研究所的生化武器，其更是中共及其他黑暗势力借此以疫苗进行杀戮的工具。为此，美国必须小心谨慎地公布与之相关的证据和事实，从而对中共与所有涉及人员进行追责，进而揭露邪恶势力的这一布局。
+**简评：**
 
-班农先生还指出，目前，所有的证据都掌握在正义力量的手中，所有的谎言和虚假陈述都将不攻自破。最终，全球追责的目标都将指向中共，而这些证据将为推翻中共提供基本的事实和依据。更重要的是，在追责的过程中，政府治理世界的方式也将随之改变。
+辉瑞制药违反常规，对雇员隐瞒疫苗成份。过去15年来，辉瑞一直在研究刺突蛋白和脂质纳米颗粒的炎症性损害。公开的研究显示，所有测试的疫苗种类都对卵巢和睾丸产生损害。不同批次的产品没有正确标签，只是用A-B-C-D来标注，还需要进一步调查真相。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/02-2.png)
+[**GETTR视频链接**](https://gettr.com/post/psu17d7e3a)
 
-文字版原文：[班农先生呼吁追责中共并改变治世模式](https://gnews.org/zh-hans/2020829/)
+[**GTV视频链接**](https://gtv.org/video/id=61ffd768585ecc15d73e1aeb)
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
-**更多资讯，更多关注**
+**视频字幕：**
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+**主持人**：维特医生，这有来自艾普尔.摩丝关于辉瑞制药的爆料，难以置信的是他们竟然连雇员都保密疫苗的成份，而不是像他们常规做法，标注成份。他们用A-B-C-D包来标注，这违反了他们以前的任何规则。基于你的经验，维特医生，他们为什么这么做？
 
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+**维特医生**：我认为辉瑞对这些成份的掩盖，比你们认知的更加震惊。他们在过去15年来，一直在研究刺突蛋白和脂质纳米颗粒的炎症性损害，并且继续开展这项工作。我们公开的一些研究显示，所有测试的疫苗种类都对卵巢和睾丸产生损害。这正是目前正在发生的部分情况。事实上，不同批次的产品没有正确标签。不同批次的不良事件存在差异，这一事实也需要进一步调查。我很感谢艾普尔和你还有约翰，正在推进这项工作。
 
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+*字幕：free20200604 | 听写：云岭 | 翻译：Blue |PR：Roberts｜简评/文字整理/编辑：胖丁 | Page：我是球大哥*
 
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+* * *
 
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
 
  
 
