--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,27 +1,39 @@
 ---
-title: 岸田首相与普京电话会谈，表达对入侵乌克兰的担忧
+title: 有声&#124;美通过《2022年美国竞争法》，防止中共企业垄断
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2022680/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022734/)
 
-撰稿：东京樱花团/向海
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-32.jpg)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2Fimg.republicworld.com%2Frepublic-prod%2Fstories%2Fpromolarge%2Fxhdpi%2Fldoq2nw69ow3nsje_1645091947.jpeg&amp;imgrefurl=https%3A%2F%2Fwww.republicworld.com%2Fworld-news%2Frussia-ukraine-crisis%2Fjapans-pm-fum)
-日本首相岸田文雄2月17日在与俄罗斯总统普京通电话时表达了对乌克兰局势的担忧。
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
 
-据 NHK 报道，岸田首相在当天晚上 9 点 30 分左右与普京总统通电话时表示，“我正在密切关注事态发展。”
+![](https://gdb.voanews.com/09dd0000-0a00-0242-f776-08d9e826901a_w1023_r1_s.png)
+近年来，中共积极游说国际电信联盟（ITU）、国际电工委员会（IEC）等机构，让中共的企业获得竞争优势。面对此冲击，美在北京冬奥开幕当天通过《2022年美国竞争法》，旨在帮助美半导体制造业，抵消中共扭曲市场的贸易行为，包括加强反倾销规则等。
 
-针对岸田首相在电话谈判中不能单方面试图以武力改变现状，并敦促通过外交努力解决问题，普京总统就乌克兰局势发表了背景和立场。
+美国也和日本连手建立6G无人化技术的国际标准，防止中共企业垄断，并强化尖端技术保护，防范中俄经济间谍战。
 
-在会后的记者会上，岸田首相表示，“如果我们允许（俄罗斯）以武力改变这一现象，这不仅会给欧洲，也会给亚洲和整个国际社会带来错误的信息。”他将继续和各国首脑进行外交努力。
+欧盟主管竞争事务的执委维斯塔哲（Margrethe Vestager）表示，中共近期重新定义网络的基本标准，让中共对国有网络的使用者有更大的控制权，因此，欧盟委员会提出对行业标准系统实施改革，藉以避免欧洲数码产业等被被中共主导。
 
-当被问及在入侵乌克兰期间是否有任何关于制裁俄罗斯的辩论时，岸田首相只是说“我交换了意见”，但没有具体提及。
+近日，北京大学在一份报告中罕见承认，美中科技脱钩后，中共无论在技术层面还是产业层面都明显落后，中共的芯片制造、人工智能及信息科技产业更将面临严重的发展瓶颈。该报告在墙内被火速删除。
 
-另一方面，日经称如果俄罗斯入侵乌克兰，日本政府内部担心中国可能会加强在台湾和印度-太平洋地区的威胁行动。
+文字版原文：[美通过《2022年美国竞争法》，防止中共企业垄断](https://gnews.org/zh-hans/2022413/)
 
-[信息来源](https://news.yahoo.co.jp/articles/8ef3ce2665fb10500e760420c854524759fa485c)
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+**更多资讯，更多关注**
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
