--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,27 +1,29 @@
 ---
-title: FBI组建专门负责加密货币的虚拟资产开发小组
+title: 香港疫情失控，确诊病例爆炸性增长
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022635/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022730/)
 
-#### 撰稿：彩虹       
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Unknown-17.jpg)香港疫情失控，确诊病例爆炸性增长 网络图片
+据美国之音2月17日报道，香港17日新增Covid-19确诊病例6116例，再次大幅度超过前一天的4285例，新增死亡病例24人。香港今年1月以来累计确诊病例1.66万例，超过2020年和2021年两年病例的总和。
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/16451478481.png)
-图片来源：Decrypt
+病人数量大大超出医院的接纳能力，导致公立医院不堪重负。隔离设施已经达到满负荷，病床占用率已经超过90%。此外，香港的监狱也发现了疫情。
 
-《国会山报》2月17日报道，司法部周四宣布，FBI（联邦调查局）正在组建一个专门负责加密货币的新团队。
+香港的学校、健身房、影院等公共场所已经关闭，许多政府和企业员工都在家上班。这样，就能缓解疫情吗？绝不可能。因为病毒的根源就是中共。不铲除中共，病毒会永远盘旋在香港，建再多的隔离设施，建再多的病房都不够用，只有消灭中共这个制造并释放病毒的源头，香港才可能停止病毒的扩散。
 
-报道说，这个新的团队将与国家加密货币执法小组（National Cryptocurrency Enforcement Team）密切合作，检察官崔恩映（Eun Young Choi）将担任国家加密货币执法小组的第一任主任，他曾负责调查网络犯罪。
+新闻参考链接：[https://www.voachinese.com/a/hong-kong-s-covid-fight-intensifies-as-cases-multiply-by-60-times-20200217/6445883.html](https://www.voachinese.com/a/hong-kong-s-covid-fight-intensifies-as-cases-multiply-by-60-times-20200217/6445883.html)
 
-在一份声明中，崔恩映说，“自数字货币诞生以来，该部门一直处于调查和起诉涉及数字货币犯罪的最前沿。NCET（国家加密货币执法小组）将发挥关键作用，确保随着围绕数字资产技术性增长和发展，该部门反过来加快和扩大其努力，以打击各类罪犯的非法滥用。我很高兴能领导NCET令人难以置信和有才华的律师团队，并开始为该部门的这一重要优先事项工作。”
+* * *
 
-文章说，崔恩映周四开始全职工作。加密货币执法小组将专注于加密货币和数字资产的犯罪滥用所带来的挑战。该团队还将由整个部门的律师组成，包括具有加密货币、网络犯罪、洗钱和罚没背景的检察官。
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-与之不同的是，FBI成立的这个负责加密货币的虚拟资产开发小组（Virtual Asset Exploitation Unit）新团队将由加密货币专家组成，为整个联邦调查局提供分析、支持和培训。该部门称，团队还将创新其加密货币工具，以预警未来威胁。
 
-**新闻来源**
+编辑：【英国伦敦喜庄园编辑部】
 
-[FBI to form new cryptocurrency unit](https://thehill.com/policy/technology/594763-fbi-to-form-cryptocurrency-unit-doj-taps-enforcement-team-director?rl=1)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
 
  
 
