--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,31 +1,40 @@
 ---
-title: 4700名美军悉数抵达波兰，英国、波兰、乌克兰发联合声明
+title: 儿童不需要接种新冠疫苗
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022568/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022722/)
 
-#### 撰稿：彩虹       
+**简评：**
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/16451455791.png)图片来源：Notesfrompoland
-《国会山报》2月17日报道，周四，英国外交大臣利兹·特拉斯（Liz Truss）及波兰和乌克兰的外交部长发表联合声明，三国将制定一项《三边合作备忘录》（trilateral memorandum of co-operation），以支持乌克兰和打击俄罗斯的侵略。
+主张为儿童接种疫苗的人给出了两个原因：一个是儿童可以保护成年人。没有证据能够证明这一点。首先儿童的感染率很低，跟儿童密切接触的学校老师感染率不高，家长也很少有被孩子传染的。再者，让儿童保护成人是非常不道德的，不管有没有必要。另外一个原因是降低儿童长期患COVID的几率，但是儿童中没有发现长期患COVID的。这两种原因都不成立，给儿童接种疫苗的理由不成立。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/va01.png)
+[**GETTR视频链接**](https://gettr.com/post/ptgtht7e11)
 
-联合声明说：“这将表明我们致力于进一步加强三国之间在支持乌克兰的最优先问题上的战略合作和接触。我们将共同努力推进我们的合作，这包括但不限于协调对‘国际克里米亚平台’（ International Crimea Platform）的支持，增加我们在网络安全、能源安全方面的合作，以及促进战略沟通以打击虚假信息。”
+[**GTV视频链接**](https://gtv.org/video/id=6203c624585ecc15d73f646e)
 
-三人表示，英国和波兰声援乌克兰，帮助这个前苏联国家捍卫其独立和主权，并将向乌克兰提供支持。
+**视频字幕：**
 
-联合声明还对俄罗斯进行了含蓄的斥责，但没有具体指名该国。
+**Anthony Hinton耳鼻喉科顾问**：我们到底应不应该为儿童接种疫苗？除了一两个非常非常罕见的案例外，儿童几乎很少被COIVD伤害。因此对儿童来说，我认为接种疫苗是有百害而无一利的。他们不需要疫苗。
 
-三人说：“我们重申，每个欧洲国家都可以自由选择或改变其安全安排，包括联盟条约，任何国家都不能将欧洲的任何地区视为其影响范围。”
+那你为什么要这样做呢？但是某些人仍然在推动此事，说是为了保护成年人。几乎没有任何证据证明这一点。如果你看一下学校老师的COVID感染人数，比一般人要少，而且他们一直在与儿童接触。如果你看一下感染的儿童，他们的家人中有多少人感染了？你会得到同样的结果。儿童似乎很难传播，可能是因为他们的症状较少，如果他们没有那么多的咳嗽和吐痰，他们就不会那么多地传染。
 
-报道说，周四，拜登总统表示，俄罗斯可能“在未来几天内”入侵乌克兰。
+对于给儿童接种来保护成年人这件事，我只想说这是完全不道德的。即使是必要的，也是完全不道德的。我的意思是，孩子的祖父母会说：请不要为了保护我而对我的孙子做什么—让他们处于危险之中。我可以选择自己接种疫苗，这是我应该做的。
 
-而根据《国会山报》同一天的报道，五角大楼官员告诉《纽约时报》，4700名美军已经全部抵达了波兰以东，以加强北约东翼的防御。4700名美军包括来自第82空降步兵旅战斗队的3000名士兵和第82空降师的1700名士兵。
+这是他们给孩子接种的一个原因。另一个原因是长期患COVID，但在儿童中真的没有长期患COVID的。因此，人们推动儿童接种疫苗的两个主要原因并不存在。
 
-**新闻来源**
+*字幕：Vekap | 听写：云岭 | 翻译：致良知 | PR：Roberts |简评/文字整理/编辑：胖丁 | Page：我是球大哥*
 
-[Ukraine, Poland and UK agree on accord to combat Russian aggression](https://thehill.com/policy/international/594802-ukraine-poland-and-uk-agree-to-accord-to-combat-russian-aggression)
+* * *
 
-[Last US troops arrive in Poland](https://thehill.com/policy/defense/594743-last-us-troops-arrive-in-poland)
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
 
  
 
