--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,36 +1,39 @@
 ---
-title: 测试结果显示疫苗对卵巢和睾丸产生损害
+title: 中共的清零防疫政策遭遇尴尬
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022792/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2022872/)
 
-**简评：**
+**撰稿：日本东京方舟农场 東山堂主**
 
-辉瑞制药违反常规，对雇员隐瞒疫苗成份。过去15年来，辉瑞一直在研究刺突蛋白和脂质纳米颗粒的炎症性损害。公开的研究显示，所有测试的疫苗种类都对卵巢和睾丸产生损害。不同批次的产品没有正确标签，只是用A-B-C-D来标注，还需要进一步调查真相。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/02-2.png)
-[**GETTR视频链接**](https://gettr.com/post/psu17d7e3a)
+自从张文宏的“病毒共存说”遭到批评打压，“共存派”似乎销声匿迹，人们知道“清零派”的后台是当今皇上，“清零”是习的一人之策，是习要彰显习帝国举国体制伟大成就之举，悖逆龙鳞是没有好下场的。在清零的既定方针下，“全党、全军、全国各族人民”劲往一处使，围绕如何能够一声令下就能实施“大规模流调排查、大规模全员核酸检测、大规模隔离管控”等措施。为了提升这三条主要能力，地方政府主导下，组建了以疾控、公安、大数据、政法人员的流调排查队伍，有些市多达数千人，大量扩充实验室采购核酸检测设备，建造隔离场所和强征酒店用于集中隔离，以满足数千或上万人的隔离需要，尽管有如此手腕，中共在“清零”的道路上面临种种尴尬。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-76.jpg)（图片来自新华社）
+**尴尬一，环顾诸国，发现坚持清零的没几个，中共处方失效**
 
-[**GTV视频链接**](https://gtv.org/video/id=61ffd768585ecc15d73e1aeb)
+习当局认为，通过把中共国与世界隔离的“清零政策”，将能有效地控制疫情，也是习的伟大政绩，内外宣开足马力宣传使民众相信政策是正确的，是中共向世界贡献的“防疫良方”。但随着奥密克戎新株所引发的疫情浪潮：高传染性、低致病性，欧洲国家已开始逐步解除限制性的措施，当初选择清零战略的国家，如澳大利亚、新加坡、新西兰、越南等正在放弃清零战略，而中共要维持清零政策，不得不使用更加严厉的防疫措施。这些措施也越来越把中共推向孤立。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-53.jpg)（图片来自网络，石家庄黄庄公寓集中隔离场所工地）
+**尴尬二，人员疲劳怨声四起**
 
-**视频字幕：**
+2020年以来起始彼伏的疫情，中共采取的运动式防疫，驱赶各级官员、公安人员、医务人员，夜以继日去排除管控；中共的不透明性宣传、多方混乱的信息和谣言增加了焦虑，引发了民众恐慌以及对政府和防疫工作者的怨恨，据报道，患者或家属被骚扰、威胁和人身攻击时有发生，如2月4日百色疫情零号感染者许某，就受到来自多发的骚扰和威胁，为防事态扩大，地方政府不得不适当压制。
 
-**主持人**：维特医生，这有来自艾普尔.摩丝关于辉瑞制药的爆料，难以置信的是他们竟然连雇员都保密疫苗的成份，而不是像他们常规做法，标注成份。他们用A-B-C-D包来标注，这违反了他们以前的任何规则。基于你的经验，维特医生，他们为什么这么做？
+公安和医生是最疲劳的群体，疫情结束，喧嚣过后，可能还要面临反腐清算，纯洁公安和医生队伍的“清零”行动。因为前者是权力部门，后者是灰色收入的群体，民众恶之。
 
-**维特医生**：我认为辉瑞对这些成份的掩盖，比你们认知的更加震惊。他们在过去15年来，一直在研究刺突蛋白和脂质纳米颗粒的炎症性损害，并且继续开展这项工作。我们公开的一些研究显示，所有测试的疫苗种类都对卵巢和睾丸产生损害。这正是目前正在发生的部分情况。事实上，不同批次的产品没有正确标签。不同批次的不良事件存在差异，这一事实也需要进一步调查。我很感谢艾普尔和你还有约翰，正在推进这项工作。
+**尴尬三，****“****清零****”****使经济受挫，财政承压，难以为继**
 
-*字幕：free20200604 | 听写：云岭 | 翻译：Blue |PR：Roberts｜简评/文字整理/编辑：胖丁 | Page：我是球大哥*
+“清零”是一场政治运动，投入是不计成本的，尽管中共发言人赵立坚宣传：“中国经济长期向好的基本面没有变，中国作为全球经济增长重要引擎的地位没有变，国际社会对中国经济的信心没有变”“为全球经济持续复苏注入动力”。
 
-* * *
+但是现实却并非如此：2022年应该是中共国经济非常糟糕的一年。高盛预测2022年的中国经济增长将为4.3%，几乎只有2021年的一半。以人口将近1300万的陕西西安为例，实施封城超过三周，“人不出户、车不上路”，给当地的经济造成巨大损失。随后的广西百色，虽然只有400多万人口，但封城的影响却波及全省，很显然，即使实施严厉的清零，也无法控制疫情的蔓延。起始彼伏的疫情和严苛的防疫政策冲击下，中小企业纷纷倒闭，财政空虚，工资发不出，这样的防疫，地方负荷巨大，难以为继！
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+**尴尬四，共存，还是清零？仍然是个难题**
 
+习的好强、好功和死要面子，注定不会轻易改变防疫策略，政治运动或兵团作战般奴役人民使习充满了快感。中共的疫情专家并非没有提出“共存”理论，但都被打压，不敢发声，“清零派”在奥米克戎面前被啪啪打脸，实际上，大部分防疫官员都知道“清零”不可能，但不敢违背“圣意”。最近所谓的“动态清零”，在清零前加上“动态”，辩解说清零是“动态”的，不是追求“零感染”，是有一起扑灭一起，这其实就是“无法清零”，体现了习的内部意见不一又无可奈何的矛盾心理。
 
-编辑：【英国伦敦喜庄园编辑部】
+清零已是骑虎难下：放开，疫情肆虐，瞬间政绩化为乌有，啪啪打脸；坚持，重挫经济财政空虚，民怨四起。或者习并不在乎这些，而是想通过病毒管控刁民才是主要的，未来的家天下需要驯化的良民，才可确保江山永固！
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+参考链接：
+[https://www.businesstoday.com.tw/article/category/80392/post/202201170015/](https://www.businesstoday.com.tw/article/category/80392/post/202201170015/)
 
-
+编辑：青城道姑
+发布：爱放飞
 
  
 
