--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,44 +1,29 @@
 ---
-title: 拉脱维亚运动员嘲笑北京冬奥会为“政治剧场”
+title: 从美元和欧元看到中共的狂妄
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022764/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022850/)
 
-![An armed policeman marches through a 17-meter-high flower bed with the theme of &quot;Wonderful Winter Olympics&quot; at Tiananmen Square on Jan. 15, 2022 in Beijing, China. (Lintao Zhang/Getty Images)](https://img.theepochtimes.com/assets/uploads/2022/02/16/TC-Olypmic-700x420.jpg)2022年1月15日，中国北京，一名武警在天安门广场以“精彩冬奥”为主题的17米高花坛中行进。 （盖蒂图片社）
-来源于《大纪元时报》网站2022年02月16日的报道，两届奥运会铜牌得主、拉脱维亚男子雪橇队现任教练马丁斯·鲁贝尼斯(Martins Rubenis)在2月7日(周日)的冬奥会比赛结束数小时后接受拉脱维亚媒体采访时，借机表达了他对主办2022年奥运会的中共政权的蔑视。
-在接受拉脱维亚的国家公共广播公司拉脱维亚广播电台和拉脱维亚电视台的采访时，鲁贝尼斯称北京冬奥会为“政治剧场”。
-“这是一个巨大的‘奇观’，对我来说，作为一名奥运选手，我看着这一切感到心痛。”鲁贝尼斯告诉拉脱维亚媒体。
-他说，他的团队晚上打开电视，却只看到“一个频道上播放着挂有毛泽东照片的天安门广场和在角落上的奥运五环”。当他们第一次到达并下飞机时，他们遇到了“穿着白色防护服的人”，他们可能被告知国际运动员“正带来另一场瘟疫”。
-“这感觉就像我们被当作瘟疫对待，他们不得不与我们保持距离。”他说，“很明显，当我们经过时，中共的鲜花和旗帜正在飘扬，我们看到了一个巨大的政治剧场，主题是‘你看这里的一切有多好’。”
-2014年冬奥会后，鲁贝尼斯以运动员身份退役，担任团队教练的角色，并成为拉脱维亚奥委会的一名成员。但他说，对于2022年北京奥运会，他对是否要参加感到很纠结。
-“对于这些奥运会，我是带着很强的双重感受来的。直到最后一刻，我都不知道我是否能够来到这里。”鲁贝尼斯告诉媒体。
-作为一名对中国人权直言不讳和积极的倡导者，鲁贝尼斯曾在2008年北京奥运会前担任全球人权火炬传递的官方大使。该接力是一项全球性的努力，旨在提高人们对在中共国受到中国共产党迫害的群体的困境的认识，并呼吁将2008年奥运会从中共国转移或抵制。从那时起，他持续发声，当中共国获得第二届奥运会主办权时，他感到震惊，尽管它的人权记录很严重。
+美元和欧元之间的关系，就是男女之间的关系。你未来会看到这场战争发生以后，绝对是中国的习太阳对政治的无知对国际政治的无知和狂妄。
 
-“知道我对中共国人权问题的态度，作为一名奥运选手，听到国际奥委会决定在这里举办第二届奥运会的消息，对我来说是绝对不可接受的。”他说，“并且如果我是一名运动员，我可能不会来这里。我来这里是为了帮助团队。”
-鲁贝尼斯告诉拉脱维亚媒体，在世界其他地方参加奥运会将会是另一种完全不同的感觉。
-“很多运动员在这里谈论它，很多教练也谈论它。”他说，“生活在西方世界的人不明白人们怎么能像木偶一样做那样的事情。好吧，全世界都有机会看到它，看到事物的本来面目，这是件好事。”
-鲁贝尼斯说，他理解大多数中国人从小就在中共的庇护下长大，他非常同情他们，“因为从他们的童年开始，从四岁开始，当他们被放进幼儿园时，他们就被严重洗脑。”他解释道，“这种洗脑在每一步都能看到和感受到，这就是为什么他们害怕所有他们没有征得许可的事情。”
-鲁贝尼斯强调，世界上目前正在发生的事情正在呼唤每一位珍视自由和人权的人。
-“我相信这些奥运会，以及在新冠病毒盛行期间世界上所有的这种情形，会让我们看到这样一个事实，即我们不能出卖自己的灵魂。”
-简评：
-拉脱维亚是波罗的海三国之一，从前苏联脱离出来后成为一个独立的民主国家，他们的国民曾经尝过前苏联共产主义的味道，所以能够深刻理解并同情在中共统治下的像木偶一样生活中国老百姓，同时能够认清中共用金钱对整个世界的侵蚀。
-此篇报道也仅仅是文贵先生倡导的的中共冬奥会办成“冬眠会”的一朵小浪花，在没有人权，实施种族灭绝的中共统治下的中共国，人们不仅会追问：冬奥会是什么？奥林匹克精神应该是公平、公正、平等、自由吧？这些精神在中共国存在么？在生命安全都得不到保障的中共病毒大流行背景下，在释放了中共病毒的中共独裁者们的老巢举办这样的奥运会，难道不是一种巨大的讽刺么？国际社会已经觉醒，中共国的基层老百姓也是时候觉醒了。
+**【郭先生直播摘要】 2022.2.13 从美元和欧元看到中共的狂****妄**
 
-新闻链接：[https://www.theepochtimes.com/olympic-games-in-china-a-huge-political-theater-my-heart-aches-watching-this-latvian-team-coach\_4278647.html](https://www.theepochtimes.com/olympic-games-in-china-a-huge-political-theater-my-heart-aches-watching-this-latvian-team-coach_4278647.html)
+**郭先生****: **
 
-翻译/简评：Brianchow
+欧元暴涨美元大跌，很多人以为这是美元和欧元的战争。大家一定记住，这是王八蛋的逻辑。
 
-PR：Harvey（叶知秋）
+美元和欧元之间的关系是啥你知道吗？战友们我可以告诉大家，就是男女之间的关系，谁没了谁都不行。美国需要欧元但不许你比我强大。
 
-* * *
+这就像小飞象和小飞侠，两个人默默之间到底在家里谁是老大，我离不了你，你也离不了我。但是你要把我压迫了大了，我就找别人去。但是你不能压迫得我不能活，就是美元不能没有欧元，欧元不能没有美元。美元假如没有了欧元，人民币就做大，瑞元就做大。不存在所谓美元要干掉欧元，不存在欧元干掉美元。只有美元会自杀或者欧元会自杀，不存在这个。
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+弱美元对美国经济是最好的，而且欧元强美元欧元也不愿意干。因为欧元不想跟俄罗斯这么弄，欧洲最核心的利益就是跟俄罗斯不打。但是俄罗斯说，孙子你想弄死我我还跟你不打仗，我非打你不行。对美国而言，你俄国你打吧，你打了对我是好事，欧洲弱我最强，美国的海外最大利益还是欧洲。美元和欧元之间不会导致战争，它只是利益考量的一部分。而且美国内部政治的选举即将到来，很多人说这是美国最大受益者，美国和俄罗斯的游戏绝对错了，这是一场世界上，你未来会看到这场战争发生以后，绝对是中国的习太阳对政治的无知对国际政治的无知，和自我的狂妄，和中国的互相欺骗。
+
+就像告诉习太阳普京说这是绝妙的机会。 这种欺骗一样， 是一种国际政治欺骗，和十四亿中国人认为美帝国主义一直在死亡中在堕落中， 中国要领导全世界这么无知一样，是愚蠢无知欺骗， 对国际规则完全被欺骗的老百姓， 造出一个集体自杀决定的结果。 就是中国共产党疯了， 而且这个疯狂被俄罗斯彻底利用， 赢家一定是俄罗斯， 赢家一定是美国， 灭的是中国而且欧洲因此会重生。
 
 
-编辑：【英国伦敦喜庄园编辑部】
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
+
+视频剪辑：CG. |听写：雨山溪桥客. 翻译：Arthur | tonyj | 视频制作+字幕：刀锋舞者 |编辑&发布:闪电训练
 
  
 
