--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,24 +1,29 @@
 ---
-title: 疫情+人祸=香港医疗系统崩溃！
+title: 【秘翻在线】加拿大自由车队两名主要组织者已在渥太华被捕
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2022762/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022849/)
 
-撰稿：云飞天
+**撰稿：Grace**
 
-连日破纪录，香港染疫人数日增衝破六千宗，各大医院每日有大批病人在露天通宵等候入院，医护如在地狱工作，每名医护人员要照顾至少50名患者。
+**校对：Grace**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-17-at-9.46.30-PM.jpeg)图片来源：Fox news 
+据加拿大广播公司新闻（CBC） 2月17日报道，加拿大的自由车队的两名主要组织者塔玛拉·利奇（Tamara Lich）和克里斯·巴伯9 Chris Barber）已在渥太华被捕。
 
-部分医院在户外放置约50张病床，面对近日天气转冷，医院又要腾空更多空间，将户外较体弱病人收入室内，避免将病人留在户外吹冷风。另有消息称，各公院正在室内找地方安置病人，甚至考虑外科病房、院内行人天桥等。
+据报道，利奇在周四晚上被捕，巴伯在当天早些时候被渥太华警方逮捕。两人都仍被警方拘留，预计将受到刑事指控。
 
-护士：急症如“战地” 一人照顾50人
-医院急症室护士表示，护士每次当值只可去一次厕所，不少人上班前吃一餐，捱到下班；由于人手不足，难以看顾部分有跌倒风险的长者，近日有多人跌至头破血流，需要用约束衣限制其行动。护士表示，最崩溃是见到老弱病人要在户外冒寒，于心不忍，她想问特区政府高官，是否亲自来体验在寒风冷雨中吹风两日？有护士质疑中共及香港即使推行全民检测，找出更多患者，但香港医疗系统根本无法应付。
+利奇周四早些时候向加拿大媒体证实，当来自萨斯喀彻温省（Saskatchewan）的卡车司机巴伯被逮捕并被带离时，她就在现场。
 
-有急症室医生表示，每间公立医院都情况恶劣，尤其黄昏及晚上当值医护较少，目前病房已经爆满，如果附近再有老人院大爆发，后果不堪设想。
+利奇说，她对自己要入狱的事实心有不甘，并补充说她的个人银行账户已被冻结。
 
-前线医护表示，夜更人手比例十分悬殊，有医院两名护士，需要照顾120名病人，医护面对相当大压力，入行这麽多年，从未见过这情况，很多护理程序不能提供，大家觉得好痛心和痛苦。
+报道称，他们是周四被逮捕的几个人之一。在离国会山几个街区的地方，有人看到巴伯被戴上手铐，夹在两名警察中间。
 
-发稿：MG5
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+据报道，他们是律师保罗·钱普（Paul Champ）代表他的客户21岁的公务员Zexi Li向安大略省高级法院（Ontario Superior Court of Justice）提起的拟议集体诉讼中的三名抗议活动组织者中的两人。
 
+该诉讼还提到了同为车队组织者的本杰明·迪克特（Benjamin Dichter）。
+
+据报道，当被问及巴伯的被捕时，渥太华警方表示，在提出指控之前，他们不会确认或否认对人的调查。
+
+**新闻来源：****[Convoy protest organizers Tamara Lich, Chris Barber arrested in Ottawa](https://www.cbc.ca/news/canada/ottawa/tamara-lich-chris-barber-arrested-ottawa-1.6355960)**
 
  
 
