--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,40 +1,34 @@
 ---
-title: 儿童不需要接种新冠疫苗
+title: 2月16日大直播后记：G-MALL和喜币场外交易
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022722/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2022806/)
 
-**简评：**
+整理：美哥、枫叶红了
+编辑：小红帽
 
-主张为儿童接种疫苗的人给出了两个原因：一个是儿童可以保护成年人。没有证据能够证明这一点。首先儿童的感染率很低，跟儿童密切接触的学校老师感染率不高，家长也很少有被孩子传染的。再者，让儿童保护成人是非常不道德的，不管有没有必要。另外一个原因是降低儿童长期患COVID的几率，但是儿童中没有发现长期患COVID的。这两种原因都不成立，给儿童接种疫苗的理由不成立。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/va01.png)
-[**GETTR视频链接**](https://gettr.com/post/ptgtht7e11)
-
-[**GTV视频链接**](https://gtv.org/video/id=6203c624585ecc15d73f646e)
-
-**视频字幕：**
-
-**Anthony Hinton耳鼻喉科顾问**：我们到底应不应该为儿童接种疫苗？除了一两个非常非常罕见的案例外，儿童几乎很少被COIVD伤害。因此对儿童来说，我认为接种疫苗是有百害而无一利的。他们不需要疫苗。
-
-那你为什么要这样做呢？但是某些人仍然在推动此事，说是为了保护成年人。几乎没有任何证据证明这一点。如果你看一下学校老师的COVID感染人数，比一般人要少，而且他们一直在与儿童接触。如果你看一下感染的儿童，他们的家人中有多少人感染了？你会得到同样的结果。儿童似乎很难传播，可能是因为他们的症状较少，如果他们没有那么多的咳嗽和吐痰，他们就不会那么多地传染。
-
-对于给儿童接种来保护成年人这件事，我只想说这是完全不道德的。即使是必要的，也是完全不道德的。我的意思是，孩子的祖父母会说：请不要为了保护我而对我的孙子做什么—让他们处于危险之中。我可以选择自己接种疫苗，这是我应该做的。
-
-这是他们给孩子接种的一个原因。另一个原因是长期患COVID，但在儿童中真的没有长期患COVID的。因此，人们推动儿童接种疫苗的两个主要原因并不存在。
-
-*字幕：Vekap | 听写：云岭 | 翻译：致良知 | PR：Roberts |简评/文字整理/编辑：胖丁 | Page：我是球大哥*
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-7.png)图片来源：雅典娜农场设计组（614）
 
 
-编辑：【英国伦敦喜庄园编辑部】
+G-MALL这个事情一定会来的，但是我们希望把今年的精力更多地放在这些项目上：战友们投资的GTV，战友们的喜联储，战友们的盖特，战友们的G-news，还有G-fashion，G-club经营质量的提高，功能的完善。你们认为G-MALL是我们保证商品流通的一个平台，这是肯定的。但是从今年看，它远远超出了我们想象，最后我们总是发现自己的今天比昨天超级伟大。我总是能发现，原来过去的一个月这么伟大。这是我现在生活的感受。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+就像个人破产一样，今天我感觉昨天个人破产的事，怎么这么伟大？那么现在看，不是我们要不要G-MALL的问题。全世界任何的商家以后都不可能不使用HPAY，不使用喜币。在空中有无数个G-MALL在等着我们。现在和我们谈判的（商城）能把你们吓死。喜联储这帮人真的不会宣传，我心目中的车神就是巴西的塞纳，塞纳竟然接受了喜币，把车卖给了喜联储。你们没看到吧？塞纳真是大帅哥，我心中了不得的男神。你再看看现在正在谈的几大商场。网上线下的商城都在跟喜联储谈。现在我再告诉大家，未来不仅在迪拜–原来迪拜发那个（信息）是不准确的，现在未来不仅在迪拜，很多地方会接受喜币买房子。过去你不敢想象的事儿，现在你都是完全可以想象。你再想G-MALL的时候都成了小事。
 
+场外交易的最大的问题是什么？我有HPAY，你也有，但不等于我手里边就有HDO，我手里边只有Hcoin。但我不想接受市场的价格买卖，或者说我想今天用钱，但我不一定卖掉它。我就跟对方形成契约式的精神，我拿出100块钱，（到时候）你得还给我，或者加120块钱还给我，这种交易是任何人无法控制的。
 
+我现在有1万个币想卖，但是我不想卖45块钱，我想拿回来的是100块钱一个币。有一天，我可以拿120块钱还回来，就限定的时间内或者自动划走。这个时候我就把Hcoin转给你了。这种交易是我们鼓励的，因为这个交易解决一个问题–让有些人能买币。KYC过不了的人就只能在场外交易买你的币了，因为他在美国，加拿大的钱做KYC过不了。那么更重要的是解决什么？人家对现在市场价格不认可，还有附加了一个未来我可以把它赎回的体制。喜联储是无法把这一系列都完成的，因为它必须尊重绝大多数原则，所以这个场外交易是可以的。
+
+另外一个关于新GTV，4月30号投资结束的问题,HCOIN是不能投GTV的，你只能是HDO，还是在联盟同意的统一协调下。那么这个情况下HDO投资GTV和HCOIN的价格没有什么关系？有人傻，为投资GTV卖喜币。卖了你就吃亏了。你一定会吃亏的，不管你现在卖多少钱。除了你有赎回机制，否则你一定会后悔的。所以我告诉大家，投新GTV，4月30号有些必须卖币情况下你就卖掉，价格会有短期的浮动，可能会差几块钱。
+
+资料来源：2022年2月16日郭文贵先生大直播
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
