--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,23 +1,35 @@
 ---
-title: 中共政治、经济已回天乏术
+title: 中共国民要求彻查锁链女事件
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2022917/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2023025/)
 
-撰稿/总编：雪梨
+撰稿：纽约香草山 -云豹
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/gtv-best-8.png)
-郭文贵先生在2月16日的直播中表示，无论是全球政治影响力，还是国内政治和经济，中共已回天乏术。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1680.png)
-在中共残杀香港同胞、对新疆实施种族灭绝，利用蓝金黄渗透全世界，释放中共病毒和疫苗残害全世界人民，北京冬奥会遭世界唾弃的事实面前，中共在全球的影响力已回天乏术。
+2月15日，北京大学校友及学生一百多人，联名向中共党中央及国务院发表公开信，要求彻查徐州锁链女案。该公开信提出4项主张，要求确认受虐女子的真实身份、调查20余年来忽视此受虐事件涉嫌渎职违法的相关官员、全面清查中共各地的人口拐卖案件并解救受害人、修订中共《刑法》，严惩拐卖妇女及儿童的行为。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/9-16.jpg)
+除北京大学外，清华大学、中国人民大学、浙江大学、四川大学等学校，也对此事件展开联署。 此外，湖南岳阳的民众手举标语，要求彻查事件真相；民间艺术家们也纷纷以诗歌、音乐、绘画等艺术形式，宣扬“断链”行动，引发社会的关注。
 
-中共以黑治国，以警治国，以贪反贪，以黑反贪，党内斗争激烈，中共内部政治已回天乏术。
+锁链女事件自1月28日被网友揭露后，中共官方说法，从初始的否认，到改为将受害人塑造成精神病患者，最后不得不承认有人口拐卖的事实，并拘捕相关涉案人。而后又被揭发，官方提供的身份涉嫌故意造假。
 
-在二十几家商业银行已经破产，二百多家银行即将破产；两万家小房企破产，两千多家即将破产的情况下，中共国经济已回天乏术。
+2月17日，江苏省委省政府通报成立“丰县生育八孩女子”事件调查组，似乎摆出一幅彻查此事的姿态。但在中共统治下，中共官员欺上瞒下已成常态。此次锁链女事件激起了民众积压已久的愤怒，这种民怨，或将成为击倒中共的燎原怒火。
 
-而香港和台湾向全世界证明，中国人勇敢、勤劳和诚信的品质，对自由、民主、文明、信仰的向往和追求。（请播放视频，视频时长2‘47“）
+[新闻连接]：
 
-视频链接：https://gtv.org/video/id=620d618db0af02660af46a64
+[徐州8孩案延燒 中國民間群起要求徹查真相](https://www.cna.com.tw/news/acn/202202160360.aspx?utm_source=cna.app&amp;utm_medium=app&amp;utm_campaign=inapp_share)
+
+[徐州8孩案證實涉人口拐賣 官方刑事拘留父親董志民等3人](https://www.cna.com.tw/news/acn/202202100387.aspx?utm_source=cna.app&amp;utm_medium=app&amp;utm_campaign=inapp_share)
+
+[徐州8孩案大轉折 小花梅行蹤成謎並非8孩媽](https://www.cna.com.tw/news/acn/202202150379.aspx?topic=3778?utm_source=cna.app&amp;utm_medium=app&amp;utm_campaign=inapp_share)
+
+[江苏成立“丰县生育八孩女子”事件调查组](https://www.163.com/dy/article/H0DN5TGN0512DFT3.html)
+
+
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-12-at-10.08.22-PM-768x1076-3.png)
+
+编辑：飞虹
+
+总编：雪梨
 
 校正/发稿：浪迹天涯
 
