--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,42 +1,29 @@
 ---
-title: 郭文贵先生2022年2月17日盖特视频（9分47秒）全文字版
+title: 法国病毒学家、诺贝尔奖获得者卢克·蒙塔尼耶教授逝世前三周在意大利发表演讲
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2022681/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022757/)
 
-听写整理编辑：东京樱花团/Peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-68.png)
-兄弟姐妹们，兄弟姐妹们，啥年代现在是？七哥，昨天个人破产，这个喜币场外交易，说KYC都突破了，上市以来的，所有的数据，这是弄啥嘞呀？你以为这是弄啥嘞，兄弟姐妹们？
+卢克·蒙塔尼耶教授指出，新冠疫苗是基因传播的产物。它不能防止传染，而是毒药。应停止接种疫苗。并提出一些药物可以有效地治愈新冠。
 
-兄弟姐妹们，2月17号，尊敬的战友们好！哎呀，这世界变化太快了，大家注意到了吗？国内的经济、银行、世界的经济，乱了，乱了，乱了，共产党，这老杂毛还贼心不死呢，他不知道他的末日已经来了，你看着吧，兄弟姐妹们。
+因为这些疫苗是合成的。根据错误的策略。一个严重的错误。这个策略是一个巨大的错误。这个策略只不过是推广这个产品。它是一种疫苗一种基因传递的产品。因此自然和所有的实验都表明这些疫苗并不能预防传染病。与他们一开始宣布的相反。
 
-香港的病毒这么高，香港成啥了？最好的医院系统，崩溃了，全世界上最优秀的警察成了黑警了，全世界外国投资最安全的地方，现在成最不安全投资的地方，全世界五大洲四大洋，各种种族最多的地方，现在成了共产党一家霸占了，流氓的共产党啊！天不灭共，天理不容！
+这是科学界公认的，如今不仅仅是因为临床证据，更是因为所有的结果。这种疫苗引起的所有疾病。不幸的是，它们有更严重的影响。由信使RNA合成的刺突蛋白包含在疫苗中，对细胞有毒。它是有毒的。
 
-啊“锁链女”在国内引起这么大震撼，啊，援藏的干部的孩子，援藏啊，谁援藏没好报应，谁帮助共产党弄西藏的，弄新疆的，你家人等着报应吧，老天看着呢，你不相信神灵，那就试试。
+例如，这种蛋白质会影响心脏等器官。一些年轻运动员死于接种疫苗。这是不能容忍的。疫苗不是为了杀戮而是为了保护。所以给儿童接种这种疫苗是犯罪行为。
 
-唉，哎呀，我这又喘不过气了，我还有六组呢，我才做了七组呢，啥都不说了今天，明天直播，啊，我又喘过来气了，哼，那我再做一组得了，我再做一组去吧，啊，我再做一组，兄弟姐妹们。
+还有比这更严重的影响。这些疫苗很可能导致神经系统疾病。非常严重的脑部疾病。已经有数十人死亡。由于疫苗接种的这些长期影响有时神经系统症状已经表现出来了。在第二次加强接种新冠疫苗后，没有人能预测有多少接种了新冠疫苗的人是否会患上这些神经系统综合症。
 
-所以说，兄弟姐妹们，兄弟姐妹们，这共产党的假、蒙、骗、黑，害人太深了，造的孽，全世界的经济，全中国人民的孩子都在为老共买单，你说咋弄啊？
+因此，我要求我所有的同事停止给人们接种这种疫苗。不断为人们接种疫苗的医生绝对清楚这一点。如果他们以前不清楚，现在清楚。
 
-然后大家看到喜币，很多战友，真聪明！特别日本的战友，一声不吱，找了很多食品链儿，食品链儿，然后，接受喜支付，日本人悄悄的干活，这几天火了。啊还有在这个巴西的矿，俄罗斯金矿，还有人现在去尝试西班牙的那个火腿，食品链是最好的，因为呢，那个能大量省下钱。现在好几家家具，还有共生时装的，都悄悄地接受了，省65%成本呐，想啥呢？这是天大的买卖，兄弟姐妹们，抓住这个机会是你前所未有的。啊在俄罗斯搞矿的，两笔交易就三亿多美金啊，啊三亿多美金。
+当心，当心！
 
-咱们前天有战友在这个喜支付上，在Hpay上，完成了巨大的交易，这都保密，咱这儿跟我说：“七哥，解决了我十几年的问题啊”，啊太好了，我们就是要拯救那些被奴役，被隔在一个墙又一个墙墙里边的那些人，啊已经默默地接受了自己是N道墙那里边的奴隶，都不想挣扎了，这才是真正的恐惧，Hpay将解放你的生产力，告诉你，这些墙不属于你的，财富自由，才能达到你人格独立，人格独立，人格自由才有人性，才有人权，否则都是扯淡的事情，是吧？
+他们应对人类的未来负责。他们忘记了治疗方法。他们不应该只关注预防。所以不仅有疫苗，还有效果很好的药物。没被用来治疗的药是抗生素。
 
-你的钱只能在你的家里边，像东北买啥？买点粮食，买点菜，是吧？过年时候啊弄点过年货，平常买点衣服，你那你就是一生就是奴才。钱不是干这用的，钱是让你应该，钱让你赚更多钱，钱给你走出家门儿，去旅行，去见识，啊读更多的书，走更多的路，见识更多美好，啊不是在福建天天在那儿养点养点鸡，养点鸭，就死在山里边了，你不是山奴，你也不是鸡奴，是吧？你应该走出你福建的武夷山，你应该走出你所谓的大别山，走出你的昆仑山，啊见识这个世界，否则你生跟死有什么两样，跟埋在土里有什么两样，这就是财富。
 
-但是你的银行共产党控制，想给你关就关了，而且你越存越少，不就完了吗？像加拿大卡车司机，（银行）不要脸，本来卡车司机银行给人家停了，天下岂有此理啊？辛辛苦苦拿命挣的钱，结果成了你的威胁工具，怎么可以？！而是要人家六十，七十五的税，敲诈勒索，太可怕了。
 
-但是悲剧的是中国共产党是全世界政府花老百姓钱的总和，是中国共产党，可悲不？可悲嘛，兄弟姐妹们？唉中国人不知道这是最可怕的，本身本来是个人，人把你变成猪和狗了，你还真以为自己是猪和狗。七哥就不服这一套，俺就不服，咋的吧？
 
-七哥个人破产以后老轻松了，我现在我觉得真的，经历过啊一切以后，这个啥都没有了，咋这么轻松啊？啊太轻松了，没有一点心理……，你说我干啥花钱？是不是没有任何花钱的问题？吃点饭，穿点衣裳，现在连英国，日本也不去了，就在美国。美国这地方啥都便宜，世界上最贵工资的地方，食品物价最便宜的地方，你说咋花钱？有钱不知道咋花，但战友们，你们需要钱，你们没经历过富有吧？你们要尝尝富有的滋味儿，才能有我这种破产的感觉呀。啥都不说啦，明儿直播。
 
-稿件仅作参考，最终以郭文贵先生盖特视频内容为准。
-
-[郭文贵先生2022年2月17日盖特视频](https://gettr.com/post/pv3wdr2e0a)
-
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
-
+视频听写/翻译：三分 | 校对：烟波浩渺 | 视频剪辑/制作/字幕：三分 | 编辑：FiLa文新心 | 发布：闪电训练
 
  
 
