--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,27 +1,48 @@
 ---
-title: 岸田与普京就乌克兰局势举行电话会谈
+title: 【秘翻在线】美国教育部免除了大学生的4.15亿美元的借款
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2022503/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022712/)
 
-作者：东京樱花团｜文小白
-![](https://assets.gnews.org/wp-content/uploads/2022/02/pasted-image-0-1-3.png)[*图片来源*](https://fnn.ismcdn.jp/mwimgs/f/b/-/img_fbab4fdd9596c1e84fc7cc23b34bffc9529907.jpg)
-据NHK 2月17日消息，今晚9:30以后岸田首相就乌克兰持续的紧张局势与俄罗斯总统普京进行了20分钟的电话会谈。
+**撰稿：Grace**
 
-岸田首相表示他正密切注视着乌克兰局势，并敦促俄罗斯通过外交谈判寻求有关国家可以接受的解决方案，他说，以武力单方面改变现状是不可接受的。普京总统解释了乌克兰局势的历史和他本人对此事的看法。
+**校对：Grace**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-17-at-8.50.29-PM.jpeg)图片来源：kfvs12
+据CBS news 2月17日报道，在新的证据显示大学生的学校可能误导了他们的贷款后，美国教育部已经批准了近16000名前学生的4.15亿美元的借款人辩护索赔。最新一轮的贷款豁免使该部门为超过10.7万名借款人批准的总金额达到约20亿美元。
 
-两位领导人同意继续就日俄关系进行对话，包括北方领土问题在内的和平条约的谈判以及乌克兰和其他地区的国际局势。
+联邦学生援助署首席运营官理查德·科德雷（Richard Cordray）周三在一份声明中说：“当学院和职业学校将自己的利益置于学生之上时，我们不会视而不见。”
 
-会后，岸田首相告诉记者：“我们将继续坚持不懈地进行外交努力，以减少紧张局势，我们将与七国集团和国际社会的其他成员合作，对实际情况作出适当的反应。”
+**德弗里大学 （****DeVry University****）**
 
-此外，岸田首相还与乌克兰总统泽伦斯基进行了电话交谈，双方同意共同努力，通过外交努力缓解紧张局势。
+在教育部审查了 “大量的证据 “后，大约1800名前德弗里大学的学生将被免除7170万美元的费用，这些证据表明该大学一再误导未来的学生。
 
-岸田首相将参加下周在网上举行的七国集团领导人紧急会议，根据他与普京总统和泽伦斯基总统的电话交谈结果，他希望讨论七国集团国家如何能够共同努力，减少紧张局势。
+德弗里大学被指控在2008年至2015年期间不准确地声称，90%积极寻找工作的毕业生在毕业后六个月内获得了所学领域的工作。但教育部表示，实际比例约为58%，而且据称学校官员多年来一直知道这个不准确的统计数字。
 
-信息来源：[**岸田首相 日ロ首脳電話会談で外交交渉通じ解決方法追求求める**](https://www3.nhk.or.jp/news/html/20220217/k10013490001000.html)
+教育部表示，它预计纽约学校的批准数量会增加。
 
-*校对：东京樱花团/東洋武士*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+#### 西木学院 （Westwood College ）
+
+同样，西木学院被指控在2002年至2015年期间谎报其毕业生的就业率为80%或更高，教育部指出，该学院撒谎说”毕业生的工资将达到5万美元或更多”。学校还说，如果学生在毕业后六个月内没有找到工作，学校将帮助他们支付账单。
+
+来自该校的约1600名借款人将被免除5310万美元的贷款，教育部说，它正在确定以前被拒绝的案件，这些案件可以在周三的证据下重新开放和批准。
+
+报道称，这是针对这所现已关闭的科罗拉多州丹佛市学校的第三次此类调查结果。
+
+#### 明尼苏达商学院/环球大学（Minnesota School of Business/Globe University）
+
+教育部发现明尼苏达商学院和/或环球大学误导了刑事司法课程的学生，告诉他们毕业后可以成为明尼苏达州警察或假释/保释官。但该课程没有适当的认证或证书，使得其学生无法进入这些角色。
+
+因此，学生们将获得全额的借款人辩护解除。教育部批准为270名学生提供约300万美元的减免。
+
+据报道，这是该学校的学生第二次获得清偿。
+
+#### 其它学校
+
+教育部周三宣布，超过11,900名曾就读于包括科林斯学院（Corinthian Colleges）和马里内罗美容学校（Marinello Schools of Beauty）的学生将获得2.845亿美元的遣散费。
+
+教育部长米格尔-卡多纳（Miguel Cardona）说：“学生们指望他们的学院是真实的。不幸的是，今天的调查结果显示，有太多的例子表明，学生被误导在不能兑现他们所承诺的机构或项目中贷款。”
+
+**新闻来源：****[Education Department to forgive $415 million in student debt for nearly 16,000 borrowers who were misled by colleges](https://www.cbsnews.com/amp/news/student-loan-forgiveness-debt-education-department-415-million/#app)**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
