--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,19 +1,34 @@
 ---
-title: 关注中国人权的NBA球星坎特透漏获得诺贝尔和平奖提名
+title: 有声&#124;班农先生呼吁追责中共并改变治世模式
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2022498/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022711/)
 
-撰稿：追着曙光跑
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2月15日，据盖特消息显示，班农先生近日在接受采访时指出，郭文贵先生此前反复强调，当民意跌至谷底时，中共病毒疫苗强制令就会发生改变。如今，全球政客的民意调查都显示出灾难性的结果，于是，那些推行强制疫苗和疫苗护照的政客们纷纷转变了风向。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/4-38.jpg)
+班农先生也提到，正如郭先生示警的那样，中共病毒不仅是来自武汉病毒研究所的生化武器，其更是中共及其他黑暗势力借此以疫苗进行杀戮的工具。为此，美国必须小心谨慎地公布与之相关的证据和事实，从而对中共与所有涉及人员进行追责，进而揭露邪恶势力的这一布局。
 
-2月17日，NBA球星坎特发推表示，能获得诺贝尔和平奖提名，他既感到荣幸又受宠若惊；他说，有时候表明立场比领到下一份薪资更重要。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-18-at-10.31.19.jpeg)图片来自坎特推特
-美媒指出，日前被NBA球队放弃的坎特，有30位诺贝尔奖得主联署力挺坎特，他也因此被提名诺贝尔和平奖。
+班农先生还指出，目前，所有的证据都掌握在正义力量的手中，所有的谎言和虚假陈述都将不攻自破。最终，全球追责的目标都将指向中共，而这些证据将为推翻中共提供基本的事实和依据。更重要的是，在追责的过程中，政府治理世界的方式也将随之改变。
 
-坎特是塞尔蒂克前中锋，他是直言批评中共政府是反人类罪的残暴组织，是为中国人权发声的少数国际顶级运动员之一。
+文字版原文：[班农先生呼吁追责中共并改变治世模式](https://gnews.org/zh-hans/2020829/)
 
-此外，坎特曾在去年11月23日接受福克斯新闻采访时，敦促国际奥委会放弃2022年北京举行冬奥会。他说，即使大部分职业体育界都对中共侵犯人权、对中共领导层的指控保持沉默，但总得有人站出来与中共反抗。
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+**更多资讯，更多关注**
 
-信息来源：[I’m honored and humbled to received the nomination for the Nobel Peace Prize.](https://twitter.com/enesfreedom/status/1493986402077401090?s=21)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
