--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,27 +1,56 @@
 ---
-title: 喜币的四个核心价值
+title: 五角大楼对与中共国的重大战争准备不足
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2022890/)
+`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/2023006/)
 
-喜币不能超发，可以兑现，没有第三方，无成本。
-
-**【郭先生直播摘要】 2022.2.13 喜币的四个核心价值 **** **
-
-**郭先生：**
-
-战友们你们要懂得喜币喜联储它有多伟大，喜币最牛的四点它完全搞了。 你存在银行的钱和过去的纸币。第一它增发。丹尼给了我100块钱, 我给你印出了一千块钱, 你就被兑水了. 第二个最可怕的问题，我们大家都忽视掉的问题, 它是不可兑现，就是我可以不还给你, 我有不兑现的权力, 这是更可怕。 喜币绝不可能，因为一美元就是一美元，一币就是一币，就是市场交易。第三件事，它是一个中介，第三方经营化，它不是点到点。
-
-我们的喜币喜美元是A到B，喜联储不能控制，没有任何权力。第三个，它不是中介方，第四个，最核心的是什么？它没成本。你去想想，Hpay没有成本，没有成本的没有第三方的，绝对必须保证原值的。第四不可增发的，银行哪有这个条件？哪家银行不增发？哪家银行不印刷？而且关键最核心的这四样的基础是什么？
-
-它的价值，大家要记住，喜币一年就十个亿。多一个就是犯罪，所有美国人所有全世界币，政府一句话就可以印刷。叫超发，那十亿个币是你知道的，关键是美国也好，我有一万个亿我不增发。他没告诉你我有一万个亿，喜币白皮书是先订下数量，没有一个国家银行告诉你我的币有多少个。没有一个，只有喜币，BTC牛就牛在固定数量，只有2600万。
-
-我就这麽多，但是是不是这么多另说，就这一样它就赢了，才有今天的比特币，这是核心。当发现喜币有任何一个增发的时候，你们记住，你们一定告死它，那么它会把命赔上，终身都蹲在监狱里。这不可能的。
+比尔·格茨: 高说，五角大楼对与 [#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click) 的重大战争准备不足。海军准备不足，船员们疲惫不堪；F-35供应链困境；卫星通信容易被攻击。
 
 
 
+> GAO says the Pentagon is ill-prepared for major war with China. Navy readiness is down crews are fatigued; F-35 supply chain woes; vulnerable satellites cited [https://t.co/rBgFiSGUG9](https://t.co/rBgFiSGUG9)
+> — Bill Gertz (@BillGertz) [February 17, 2022](https://twitter.com/BillGertz/status/1494432267472551950?ref_src=twsrc%5Etfw)
 
 
-视频剪辑：GC| 听写：雨山溪桥客|翻译：Arthur |校对: tonyj | 视频制作+字幕：刀锋舞者 | 编辑&发布：闪电训练
+
+众议员布莱恩·马斯特： 据报道，我们的军人在“觉醒”培训上花费了大约600万工时。而同时，塔利班接管了阿富汗，边境遭遇了200万非法移民，俄罗斯和 [#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click) 积极备战更进了一步。
+
+
+
+> It’s been reported that our servicemembers spent roughly 6 million man-hours on “woke” training. In that time, the Taliban took over Afghanistan, 2 million illegal immigrants were encountered at the border and Russia and China moved closer to war.[https://t.co/A52ik5OGHX](https://t.co/A52ik5OGHX)
+> — Rep. Brian Mast (@RepBrianMast) [February 18, 2022](https://twitter.com/RepBrianMast/status/1494476760469184516?ref_src=twsrc%5Etfw)
+
+
+
+参议员玛莎.布莱克本： 疫苗强制不起作用。 封城不起作用。 压制言论自由也不会行得通。
+
+
+
+> Mandates do not work. 
+> Lockdowns do not work. 
+> Silencing free speech will not work.
+> — Sen. Marsha Blackburn (@MarshaBlackburn) [February 17, 2022](https://twitter.com/MarshaBlackburn/status/1494374983929376773?ref_src=twsrc%5Etfw)
+
+
+
+参议员马可·卢比奥： 今天在乌克兰东部的战斗不是通常的小规模冲突，俄罗斯代理人今天发动的袭击比整个 1 月份还要多 今天标志着普京入侵前计划最后阶段之一的开始
+
+
+
+> The fighting today in eastern [#Ukraine](https://twitter.com/hashtag/Ukraine?src=hash&amp;ref_src=twsrc%5Etfw) is NOT the usual daily skirmishes,Russian proxies launched more attacks today than all of January
+> 
+> Today marks the beginning of one of the final phases of [#Putin](https://twitter.com/hashtag/Putin?src=hash&amp;ref_src=twsrc%5Etfw)’s pre-invasion plan
+> — Marco Rubio (@marcorubio) [February 17, 2022](https://twitter.com/marcorubio/status/1494391486363938822?ref_src=twsrc%5Etfw)
+
+
+
+参议员约翰·肯尼迪： 俄罗斯并非孤军奋战。新的邪恶轴心包括中国和伊朗，他们正在利用乌克兰来测试拜登团队，看看美国是否是坚决严肃的。 【附肯尼迪参议员在福克斯的采访视频】
+
+
+
+> Russia is not acting alone. The new Axis of Evil includes China and Iran, and they’re using Ukraine to test the Biden admin to see whether or not the U.S. means business. [pic.twitter.com/sXmx8B24fj](https://t.co/sXmx8B24fj)
+> — John Kennedy (@SenJohnKennedy) [February 17, 2022](https://twitter.com/SenJohnKennedy/status/1494424175821443075?ref_src=twsrc%5Etfw)
+
+
 
  
 
