--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,33 +1,55 @@
 ---
-title: mRNA 疫苗接种或产生“疫苗获得性免疫缺陷综合症”
+title: 日本近日的感染状况以及医疗前线的实况
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/2023532/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2023701/)
 
-撰稿：文月
-![](https://assets.gnews.org/wp-content/uploads/2022/02/181.jpg)图片来自网络
-越来越多的证据表明，mRNA 疫苗接种会产生免疫缺陷综合症——疫苗获得性免疫缺陷综合症或疫苗艾滋病。根据目前的情况，人们可能会在数周、数月或数年的时间窗口内由于曾经接种CCP病毒疫苗而导致该疾病。
+撰稿：东京樱花团/待命（文晓）
 
-越来越多的报告显示，在接种疫苗的人群中出现了癌症、疱疹、带状疱疹和自身免疫性疾病等疾病。所有这些疾病的共同点是，防御这些疾病所依赖的免疫系统出了问题。越来越多的各种报告记录了CCP病毒疫苗所造成的损害，有些病毒疫苗损害导致的疾病需要在医院或重症监护室才能得到治疗。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/日本近日的感染状况以及医疗前线的实况.png)
 
-与此同时，越来越多和医药公司有关的警告信号也开始出现。例如，辉瑞公司出人意料地撤回了批准儿童mRNA制剂的申请，并在其年度报告中增加了新的业务风险：来自临床前和临床研究的“不利的安全隐患”可能会影响其业务。
-此外，Moderna 的首席执行官正在减持股票，并从 Twitter 上消失。强生公司正在停止生产其 COVID 疫苗。BioNTech 和 Moderna 的股价也处于下行甚至暴跌的趋势。
+早日电视新闻2月18日消息：17日，日本全国新确认中共病毒(新冠病毒)感染人数为95,210人。
 
-其中一个可能的原因可能是来自苏格兰、丹麦、英格兰、加拿大的数据——这些国家对感染冠状病毒的患者有着相对全面数据统计。他们发现，与未接种疫苗的人相比，接种疫苗的人更容易受到感染、严重疾病和死亡的影响。这至少表明接种CCP病毒疫苗后的免疫系统被显著的削弱。
+**小池知事表示：重病患者人数呈增长趋势**
 
-疫苗艾滋病与人们普遍所理解的艾滋病病毒关联不大，因为它们产生的原因是不同的。这种疫苗艾滋病是由基因工程、mRNA、由mRNA人工合成的刺突蛋白以及其他各种成分造成的。
+东京17日感染17,864人，已是连续第9天低于前一周的同一天。然而，死亡24人的这个日子，成为今年死亡人数最多的一天。
 
-同时为了能够接种疫苗的mRNA引入细胞，免疫系统必须被欺骗。这一点则是通过利用mRNA的脂质颗粒包围mRNA来完成的！
+东京都知事小池百合子说：新的阳性病例数量呈下降趋势，但仍处于高水平。老年人的比例正在增加，患有严重疾病的人数也在增加，特别体现在老年人群中。
 
-慕尼黑Mitocare公司的现在的科学主管（Florian Schilling）曾经2006-2017年在自己的诊所工作，重点是肿瘤学和神经炎症，他解释了目前人们对于疫苗艾滋病的认知。非常重要的几个结论包括杀伤细胞的功能丧失、干扰素系统的关闭、辅助细胞的功能耗尽和防御细胞的基因重编程。
+**一个病人出院了……马上就又进来一个**
 
-除此之外，Schilling 报告了一项研究，该研究在动物实验中发现超过 6% 的测试对象存在感染增强抗体。它们的自然杀伤细胞、干扰素、Th1 和 Th2 以及其他参数的测量值显示出惊人的低值。相反，调节性 T 细胞 (Tregs)水平过高，这对接种疫苗的人造成了不可预见的负面影响。
+与此同时，大阪17日13,912人感染，比上周同一天增加了1,000多人。
 
-参考文献：
+感染正在大阪府蔓延，坂井市的邦和医院仅有的八张重度和中度感染病床，只要有人出院，马上就会有下一个患者住进来。
 
-[https://www.epochtimes.de/gesundheit/so-erzeugen-mrna-spike-impfungen-vakzin-aids-a3722648.html?telegram=1](https://www.epochtimes.de/gesundheit/so-erzeugen-mrna-spike-impfungen-vakzin-aids-a3722648.html?telegram=1)
+**一名接种了两剂疫苗的男性感染者自诉 “呼吸困难”**
 
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
+16日，一位年长的男性感染者被送到医院。医生和这位感染者如下对话：
+
+医生：你觉得呼吸困难吗？
+
+病人：是的。
+
+医生：你打了几针疫苗？
+
+病人：两针。
+
+医生：两针啊。
+
+医生：这里有个白色模糊的地方， 这被称为磨砂玻璃影，是我们发现的中共病毒感染的特征。我们将尝试消除它，使这块模糊的影子消失。所以要为您静脉注射一种叫做Lemdesivir的药物，这是抗病毒的药物。
+
+该男性被确诊为中共病毒２度感染肺炎，并决定采用新疗法，进药Remdesivi进行治疗，同时需要吸氧，需要住院治疗。
+
+**致命的可不仅仅是呼吸衰竭**
+
+据该医院称，本月老年患者的数量有所增加，入院患者的平均年龄在80多岁。
+
+邦和医院院长和田邦雄说：我的印象是，大多数病人都是75岁以上的老年人，他们更有可能成为重病患者。他们常患有肺部疾病、糖尿病、高血压等其它潜在疾病。除了中共病毒的呼吸衰竭外，还可能威胁到生命。
+
+信息来源：[“2回接種”感染男性「息苦しい」　高齢患者増加「呼吸不全以外でも…」（テレビ朝日系（ANN）） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/21887d4f900c162a17e930b98e3eb76144dd9f22)
+
+*校对：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
