--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,39 +1,23 @@
 ---
-title: 【秘翻在线】法院要求川普总统及其两位家人宣誓作证
+title: 狮城快讯：疫苗和安全管理措施 估计避免8000人死亡？
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2023141/)
+`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/2023679/)
 
-**撰稿：Grace**
+**撰稿：Eva**
 
-**校对：Grace**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-287.jpeg)图片来源：newsbreak
-据《美国国家公共广播电台》（NPR）2月17日报道，纽约州的一名法官周四下令前总统川普及其两个最大的孩子小唐纳德·川普和伊万卡·川普在21天内宣誓作证，驳回了川普夫妇的律师试图阻止或延缓纽约州总检察长莱蒂西亚·詹姆斯（Letitia James）发出传票的论点。
+据联合早报的报道，新加坡针对冠病疫情推出的公共卫生措施，以及为全国人口接种疫苗的努力，成功地将去年8月至12月的冠病死亡人数减少约8000人。
 
-报道称，纽约州最高法院的亚瑟·恩戈隆（Arthur Engoron）法官的决定是在两个小时的激烈口头辩论后作出的，川普总统的律师认为詹姆斯的调查构成了选择性执法和 “观点歧视”，并可能不适当地将民事调查的结果与詹姆斯也是一方的独立刑事案件混为一谈。
+卫生部2月17日的网站快照显示，在 533,425 例病例中，有930人死亡。这意味着所有年龄段的感染者的存活率约为99.83%。生存机会非常高。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/11-22.png)
+高疫苗接种率是否会导致这种结果？
 
-恩戈隆法官写道：“一位州检察长开始调查一个商业实体，发现了大量可能的财务欺诈的证据，并希望在宣誓后询问该实体的几个负责人，包括其名字。她有明确的权利这样做。”
+让我们回到早报说的“去年8月至12月”之前的7月31日，这一天，我们共有37人死亡和64,981例病例，这相当于 99.94% 的存活率。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/22-6.png)
+让我们再回到疫苗推出前，2020年12月30日。这一天，我们共有29 人死亡和58,629例病例，这相当于 99.95% 的存活率。甚至更好的结果！我们世界一流的医疗系统应该为保持低死亡率而受到称赞。尽管如此，我们应该认识到，剩下的 545 万人口没有受到病毒的伤害。换句话说，我们的人口足够健康，自身免疫力可以抵抗病毒。
 
-据报道，川普总统在裁决后的一份声明中批评了詹姆斯的调查。
-
-川普总统说：“她正在他们腐败的自由裁量权范围内做一切事情来干涉我的商业关系，以及政治进程。这是历史上最伟大的猎巫行动的延续–请记住，由于法官和司法部门对我的憎恨，我无法在纽约获得公平的听证。这是不可能的！”
-
-报道指出，詹姆斯于2019年3月开始对川普组织进行民事调查，几周后，川普组织的前高管迈克尔·科恩（Michael Cohen ）在国会作证说，川普总统”会指示我撒谎以促进他的商业利益”。科恩还提供了三年的财务报表来支持他自己的说法。
-
-据报道，詹姆斯的调查于2020年8月公开化。
-
-2021年12月，詹姆斯向唐纳德·川普，小唐纳德·川普和伊万卡·川普发出传票，要求他们三人提供宣誓证词，并要求唐纳德·川普提供文件。
-
-报道称，此举被许多人认为表明詹姆斯的调查可能接近尾声，她已经从川普组织、该公司的前会计师事务所和贷款人德意志银行获得了数十万页的文件。詹姆斯尚未就是否提起诉讼作出决定。
-
-关于传票的斗争迅速升级。唐纳德·川普和川普组织于12月底在联邦法院联合起诉詹姆斯，要求法官阻止詹姆斯的调查。
-
-据报道，1月，詹姆斯表示，她已经初步认定川普组织 “利用欺诈性和误导性的资产评估来获取经济利益”，她在一份长达115页的法庭文件中详细说明了一些有问题的行为。
-
-本月，长期为川普组织服务的会计师事务所结束了与该公司的关系，并在一封信中警告说，2011年至2020年的财务报表 “不应该再被依赖”。
-
-今年7月，一个大陪审团起诉了川普组织及其前首席财务官艾伦·韦塞尔伯格（Allen Weisselberg），指控其精心策划了一个逃避联邦、州和地方税收的计划。詹姆斯已经从她的办公室派来律师，与地区检察官合作处理他的案件，该案件可能最快在明年夏天进行审判。
-
-**新闻来源：****[N.Y. Supreme Court justice orders the Trumps to testify under oath](https://www.npr.org/2022/02/17/1081426859/ny-supreme-court-justice-orders-the-trumps-to-testify-under-oath)**
+把以上数据汇总，清楚可见去年8月到12月存活率，比7月之前的减少了万分之11.74.
+![](https://assets.gnews.org/wp-content/uploads/2022/02/33-2.png)
+那么早报，可以请教下你的估算来源吗？相关财政预算增加190万，就是让你们这样估计的吗？
 
  
 
